// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column And Row Headers 1`] = `
<style>
  .column-and-row-headers-caption {
  font-size: var(--ds-font-size-3);
  caption-side: bottom;
  text-align: center;
  font-weight: normal;
  margin-top: var(--ds-size-2);
}
.column-and-row-headers-body {
  text-align: right;
}
.column-and-row-headers-headercell {
  text-align: left;
}
</style>
<table
  data-hover="true"
  data-color="accent"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <caption>
    Svarprosent for elevundersøkelsen nasjonalt
  </caption>
  <thead>
    <tr>
      <td>
      </td>
      <th scope="col">
        2022-23
      </th>
      <th scope="col">
        2023-24
      </th>
      <th scope="col">
        2024-25
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th scope="row">
        8. trinn
      </th>
      <td>
        88,5%
      </td>
      <td>
        86,3%
      </td>
      <td>
        85,3%
      </td>
    </tr>
    <tr>
      <th scope="row">
        9. trinn
      </th>
      <td>
        88,7%
      </td>
      <td>
        86,3%
      </td>
      <td>
        84,9%
      </td>
    </tr>
    <tr>
      <th scope="row">
        10. trinn
      </th>
      <td>
        89,7%
      </td>
      <td>
        87,3%
      </td>
      <td>
        85,7%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Vg1
      </th>
      <td>
        84,8%
      </td>
      <td>
        82,8%
      </td>
      <td>
        83,1%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Vg2
      </th>
      <td>
        82,5%
      </td>
      <td>
        80,0%
      </td>
      <td>
        80,3%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Vg3
      </th>
      <td>
        79,9%
      </td>
      <td>
        75,7%
      </td>
      <td>
        76,9%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Expandable Rows 1`] = `
<table style="<removed>">
  <thead>
    <tr>
      <th>
        Navn
      </th>
      <th>
        Rolle
      </th>
      <th>
        Epost
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <button
          type="button"
          aria-expanded="true"
        >
          Rita Nordmann
        </button>
      </td>
      <td>
        Rektor
      </td>
      <td>
        rita@nordmann.no
      </td>
    </tr>
    <tr>
      <td colspan="3">
        Rita har vært rektor i 12 år og har ansvar for 45 ansatte. Hun leder skolens pedagogiske utviklingsarbeid.
      </td>
    </tr>
    <tr>
      <td>
        <button
          type="button"
          aria-expanded="false"
        >
          Kari Nordmann
        </button>
      </td>
      <td>
        Lektor
      </td>
      <td>
        kari@nordmann.no
      </td>
    </tr>
    <tr hidden>
      <td colspan="3">
        Kari underviser i norsk og samfunnsfag for 8.–10. trinn. Hun er også kontaktlærer for 9A.
      </td>
    </tr>
    <tr>
      <td>
        <button
          type="button"
          aria-expanded="false"
        >
          Ola Nordmann
        </button>
      </td>
      <td>
        Lektor
      </td>
      <td>
        ola@nordmann.no
      </td>
    </tr>
    <tr hidden>
      <td colspan="3">
        Ola underviser i matematikk og naturfag. Han er ansvarlig for skolens realfagssatsing.
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Fixed Table 1`] = `
<style>
  .fixed-table {
  table-layout: fixed;
  margin-bottom: 12px;
}
.fixed-table-body-cell {
  font-feature-settings: "tnum" 1;
}
</style>
<table id="<removed>">
  <caption>
    Tildeling skolebibliotek 2024
  </caption>
  <thead>
    <tr>
      <th>
        Kommune
      </th>
      <th>
        Tildeling (kr)
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Bjerkreim kommune
      </td>
      <td>
        330 000
      </td>
    </tr>
    <tr>
      <td>
        Færder kommune
      </td>
      <td>
        750 000
      </td>
    </tr>
    <tr>
      <td>
        Gjøvik kommune
      </td>
      <td>
        150 000
      </td>
    </tr>
    <tr>
      <td>
        Hurdal kommune
      </td>
      <td>
        550 000
      </td>
    </tr>
    <tr>
      <td>
        Marker kommune
      </td>
      <td>
        900 000
      </td>
    </tr>
  </tbody>
</table>
<ds-pagination
  aria-label="Bla i sider"
  role="navigation"
>
  <ul>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Forrige side"
        aria-hidden="true"
      >
        Forrige
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 1"
        aria-current="true"
      >
        1
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 2"
      >
        2
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Side 3"
      >
        3
      </button>
    </li>
    <li>
      <button
        data-variant="tertiary"
        type="button"
        aria-label="Neste side"
        aria-hidden="false"
      >
        Neste
      </button>
    </li>
  </ul>
</ds-pagination>
`;

exports[`Multiple Header Rows 1`] = `
<style>
  .multiple-table-head-headercell {
  text-align: center;
}
.multiple-table-body {
  text-align: right;
}
.multiple-table-body-headercell {
  text-align: left;
}
</style>
<table
  data-zebra="true"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <thead>
    <tr>
      <th scope="col">
        <span>
          Radkategori
        </span>
      </th>
      <th colspan="5">
        Trives du på skolen?
      </th>
    </tr>
    <tr>
      <th scope="col">
        <span>
          Radkategori
        </span>
      </th>
      <th>
        Trives ikke i det hele tatt
      </th>
      <th>
        Trives ikke noe særlig
      </th>
      <th>
        Trives litt
      </th>
      <th>
        Trives godt
      </th>
      <th>
        Trives svært godt
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th scope="row">
        Idrettsfag
      </th>
      <td>
        0,5%
      </td>
      <td>
        1,0%
      </td>
      <td>
        5,7%
      </td>
      <td>
        46,0%
      </td>
      <td>
        46,9%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Medier og kommunikasjon
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,9%
      </td>
      <td>
        11,3%
      </td>
      <td>
        49,4%
      </td>
      <td>
        36,1%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Musikk, dans og drama
      </th>
      <td>
        -
      </td>
      <td>
        -
      </td>
      <td>
        7,0%
      </td>
      <td>
        41,9%
      </td>
      <td>
        49,8%
      </td>
    </tr>
    <tr>
      <th scope="row">
        Studiespesialisering
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,8%
      </td>
      <td>
        8,9%
      </td>
      <td>
        49,8%
      </td>
      <td>
        38,3%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Preview 1`] = `
<table data-color="neutral">
  <caption>
    Sensur FSP6236 Tegnspråk III
  </caption>
  <thead>
    <tr>
      <th>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Velg alle ansatte"
            id="<removed>"
            type="checkbox"
            value
            name="my-checkbox"
          >
        </ds-field>
      </th>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        E-post
      </th>
      <th>
        Status
      </th>
      <th>
        Besvarelser
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg checkbox 1"
            type="checkbox"
            value="1"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="info"
        >
          I arbeid
        </span>
      </td>
      <td style="<removed>">
        19
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg checkbox 2"
            type="checkbox"
            value="2"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="success"
        >
          Ferdig
        </span>
      </td>
      <td style="<removed>">
        0
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg checkbox 3"
            type="checkbox"
            value="3"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="info"
        >
          I arbeid
        </span>
      </td>
      <td style="<removed>">
        14
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg checkbox 4"
            type="checkbox"
            value="4"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="warning"
        >
          Ikke begynt
        </span>
      </td>
      <td style="<removed>">
        35
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg checkbox 5"
            type="checkbox"
            value="5"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="success"
        >
          Ferdig
        </span>
      </td>
      <td style="<removed>">
        0
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="4">
        Totalt gjenstår
      </td>
      <td style="<removed>">
        68
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Sortable 1`] = `
<table>
  <thead>
    <tr>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        Epost
      </th>
      <th aria-sort="none">
        <button type="button">
          Telefon
        </button>
      </th>
      <th aria-sort="none">
        <button type="button">
          Rolle
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        22345678
      </td>
      <td>
        Rektor
      </td>
    </tr>
    <tr>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        87654321
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        32345678
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        62353278
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        12345678
      </td>
      <td>
        Ass. rektor
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Sticky Header 1`] = `
<style>
  .stickyheader-heading {
  margin-bottom: var(--ds-size-3);
}
.stickyheader-main {
  height: 420px;
  width: 580px;
  overflow: auto;
  padding: 0;
}
.stickyheader-table-body {
  text-align: right;
}
.stickyheader-table-body-headercell {
  text-align: left;
}
</style>
<h2>
  Ansattes utdanning fordelt på eiertype (ordinære), 2021
</h2>
<div
  role="region"
  tabindex="0"
>
  <table
    data-sticky-header="true"
    data-zebra="true"
    data-color="support1"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <caption>
      Ansattes utdanning fordelt på eiertype (ordinære), 2021
    </caption>
    <thead>
      <tr>
        <th scope="col">
          <span>
            Radkategori
          </span>
        </th>
        <th>
          5 store
        </th>
        <th>
          Andre kjeder
        </th>
        <th>
          Frittstående
        </th>
        <th>
          Kommune
        </th>
        <th>
          Totalt
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th scope="row">
          Barnehagelærer
        </th>
        <td>
          42,9%
        </td>
        <td>
          42,9%
        </td>
        <td>
          43,8%
        </td>
        <td>
          43,9%
        </td>
        <td>
          43,6%
        </td>
      </tr>
      <tr>
        <th scope="row">
          Annen pedagogisk utdanning
        </th>
        <td>
          1,9%
        </td>
        <td>
          2,8%
        </td>
        <td>
          2,0%
        </td>
        <td>
          1,3%
        </td>
        <td>
          1,7%
        </td>
      </tr>
      <tr>
        <th scope="row">
          Annen høyere utdanning
        </th>
        <td>
          2,2%
        </td>
        <td>
          2,7%
        </td>
        <td>
          2,2%
        </td>
        <td>
          1,2%
        </td>
        <td>
          1,8%
        </td>
      </tr>
      <tr>
        <th scope="row">
          Barne- og ungdomsarbeider
        </th>
        <td>
          15,0%
        </td>
        <td>
          16,4%
        </td>
        <td>
          18,4%
        </td>
        <td>
          27,7%
        </td>
        <td>
          22,3%
        </td>
      </tr>
      <tr>
        <th scope="row">
          Annet fagarbeider
        </th>
        <td>
          5,2%
        </td>
        <td>
          4,6%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,2%
        </td>
      </tr>
      <tr>
        <th scope="row">
          Annen bakgrunn
        </th>
        <td>
          32,8%
        </td>
        <td>
          30,5%
        </td>
        <td>
          28,3%
        </td>
        <td>
          20,6%
        </td>
        <td>
          25,5%
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`With Border 1`] = `
<div style="<removed>">
  <table
    data-border="true"
    data-color="support2"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <thead>
      <tr>
        <th>
          Navn
        </th>
        <th>
          Rolle
        </th>
        <th>
          Epost
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Rita Nordmann
        </td>
        <td>
          Rektor
        </td>
        <td>
          rita@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kari Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kari@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Ola Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          ola@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kai Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kai@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Mateo Nordmann
        </td>
        <td>
          Ass. rektor
        </td>
        <td>
          mateo@nordmann.no
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`With Form Elements 1`] = `
<style>
  .with-form-elements-table-body {
  align-content: start;
  justify-content: center;
  align-items: center;
}
.with-form-elements-table-body-cell {
  min-width: 200px;
}
.with-form-elements-textfield {
  min-width: 250px;
}
</style>
<table>
  <thead>
    <tr>
      <th>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Select all"
            id="<removed>"
            type="checkbox"
            value
            name="components-table--with-form-elements-checkboxGroup"
          >
        </ds-field>
      </th>
      <th>
        nr.
      </th>
      <th>
        Spørsmål
      </th>
      <th>
        Alternativ 1
      </th>
      <th>
        Alternativ 2
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Check 1"
            id="<removed>"
            type="checkbox"
            value="1"
            name="components-table--with-form-elements-checkboxGroup"
          >
        </ds-field>
      </td>
      <td>
        1.
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-1"
              autocomplete="off"
              type="text"
              value="Trives du på skolen?"
            >
          </div>
        </ds-field>
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              autocomplete="off"
              type="text"
              value="Trives ikke noe særlig"
            >
          </div>
        </ds-field>
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-3"
              autocomplete="off"
              type="text"
              value="Trives godt"
            >
          </div>
        </ds-field>
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Check 2"
            id="<removed>"
            type="checkbox"
            value="2"
            checked
            name="components-table--with-form-elements-checkboxGroup"
          >
        </ds-field>
      </td>
      <td>
        2.
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 2-1"
              autocomplete="off"
              type="text"
              value="Har du opplevd mobbing?"
            >
          </div>
        </ds-field>
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 2-2"
              autocomplete="off"
              type="text"
              value="Sjelden"
            >
          </div>
        </ds-field>
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              cols="3"
              aria-label="Textfield 2-3"
              autocomplete="off"
              type="text"
              value="Ofte"
            >
          </div>
        </ds-field>
      </td>
    </tr>
  </tbody>
</table>
`;
